--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<script type="text/javascript">
 			function init(){
 
-				document.getElementById('email').onkeyup = emailChange;
-				document.getElementById('creditcard').onkeyup = creditCardChange;
+				document.getElementById('email').onkeyup = HTMLFormUX.emailChange;
+				document.getElementById('creditcard').onkeyup = HTMLFormUX.creditCardChange;
 
 			}
 		</script>
