switching to have accepted_cards html list, bugfix

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
 			<p>
 				<label for="creditcard">Credit Card</label>
 				<input id="creditcard" name="creditcard"/>
+        <ul id="accepted_cards" class="accepted_cards">
+          <li class="americanexpress"></li>
+          <li class="visa"></li>
+          <li class="discover"></li>
+          <li class="dinersclub"></li>
+        </ul>
 			</p>
 
 			<h3>Email Entry</h3>
