adding mastercard logo

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <ul id="accepted_cards" class="accepted_cards">
           <li class="americanexpress"></li>
           <li class="visa"></li>
+          <li class="mastercard"></li>
           <li class="discover"></li>
           <li class="dinersclub"></li>
         </ul>
