--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 		<script type="text/javascript" src="html-form-ux.js"></script>
 		<script type="text/javascript">
 			function init(){
+        //HTMLFormUX.addModel({
+        //  creditcard: 'CreditCard',
+        //  cvv: 'Number'
 
+        //});
+        HTMLFormUX.register(document.creditCard)
 				document.getElementById('email').onkeyup = HTMLFormUX.emailChange;
 				document.getElementById('creditcard').onkeyup = HTMLFormUX.creditCardChange;
 
@@ -25,8 +30,11 @@
 				<li>Visa: 410000000...</li>
 			</ul>
 			<p>
+      <form name="creditCard">
 				<label for="creditcard">Credit Card</label>
 				<input id="creditcard" name="creditcard"/>
+				<label for="cvv">CVV</label>
+				<input id="cvv" name="cvv" maxlength="4"/>
         <ul id="accepted_cards" class="accepted_cards">
           <li class="americanexpress"></li>
           <li class="visa"></li>
@@ -34,6 +42,8 @@
           <li class="discover"></li>
           <li class="dinersclub"></li>
         </ul>
+        <input type="submit"/>
+      </form>
 			</p>
 
 			<h3>Email Entry</h3>
